# scrapelect

./: Cargo.toml  LICENSE-MIT  README.md  grammar.txt
.github/workflows/: ci.yml  deploy-book.yml
doc/: book.toml
doc/src/: SUMMARY.md  advanced-features.md  contributing.md  extending-scrapelect.md  interpreter-cli.md  quick_start.md  the-book.md
doc/src/language-concepts/: README.md  elements-and-selectors.md  filters.md  statements-and-values.md
doc/theme/: highlight.js
examples/: abc.csscrape  fuzzer.py
examples/inputs/: abc.html  attr.html  qualifiers.html  recurser.html  relative.html  relative2.html
examples/outputs/: abc.json  abc.snap  attr.json  attr.snap  filter_select.snap  qualifiers.json  qualifiers.snap  recurser.snap  relative.json  relative.snap
examples/scrps/: abc.scrp  attr.scrp  filter_select.scrp  qualifiers.scrp  recurser.scrp  relative.scrp
filter-proc-macro/: Cargo.toml
filter-proc-macro/src/: lib.rs
filter-types/: Cargo.toml
filter-types/src/: context.rs  error.rs  filter.rs  lib.rs  value.rs
src/: lib.rs  main.rs  scanner.rs
src/frontend/: arena.rs  ast.rs  mod.rs  parser.rs  repl.rs  scanner.rs
src/interpreter/: execution_mode.rs  filter.rs  mod.rs  repl.rs  value.rs
src/interpreter/filter/: builtin.rs  mod.rs
tests/: grammar_tests.rs
