[package]
name = "scrapelect"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
regex = "1.10"
reqwest = "0.12.5"
scraper = "0.19"
tokio = { version = "1.38.0", features = ["full"] }
filter-proc-macro = { path = "./filter-proc-macro" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
futures = "0.3"
url = "2.5"

[workspace]
members = [".", "filter-proc-macro"]
