[package]
name = "scrapelect"
version = "0.2.1"
edition = "2021"
authors = ["Max Carr <m@mcarr.one>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/suaviloquence/scrapelect"
description = "Interpreter for scrapelect, a CSS-inspired web scraping DSL"

[dependencies]
anyhow = "1.0"
regex = "1.10"
reqwest = "0.12.5"
scraper = "0.19"
tokio = { version = "1.38.0", features = ["full"] }
scrapelect-filter-proc-macro = { path = "./filter-proc-macro", version = "0.2.0" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
futures = "0.3"
url = "2.5"

[workspace]
members = [".", "filter-proc-macro"]

[dev-dependencies]
insta = { version = "1.39.0", features = ["json"] }

# compile insta and similar in release mode to improve testing times
[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
