[package]
name = "scrapelect"
version = "0.4.0"
edition = "2021"
authors = ["Max Carr <m@mcarr.one>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/suaviloquence/scrapelect"
description = "Interpreter for scrapelect, a CSS-inspired web scraping DSL"

[dependencies]
anyhow = "1.0"
regex = "1.10"
reqwest = "0.12.5"
scraper = "0.19"
tokio = { version = "1.38.0", features = ["full"] }
scrapelect-filter-types = { path = "./filter-types", version = "0.1.0" }
scrapelect-filter-proc-macro = { path = "./filter-proc-macro", version = "0.4.0" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
futures = "0.3"
url = "2.5"
clap = { version = "4.5.16", features = ["derive"] }
ouroboros = "0.18.4"

[workspace]
members = [".", "filter-proc-macro", "filter-types"]

[dev-dependencies]
insta = { version = "1.39.0", features = ["json"] }

[features]
filter_doc = []

# compile insta and similar in release mode to improve testing times
[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[package.metadata.docs.rs]
features = ["filter_doc"]
