[package]
name = "scrapelect-filter-proc-macro"
version = "0.3.2"
edition = "2021"
authors = ["Max Carr <m@mcarr.one>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/suaviloquence/scrapelect"
description = "proc-macros for making scrapelect Filters"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
